--- a/similar-networks/index.html
+++ b/similar-networks/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Similar Networks | Austin Mesh</title>
+        <title>Similar Networks | Kearney Mesh</title>
         <meta name="description" content="Discover similar mesh networks and learn how to start your own.">
         <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -13,14 +13,14 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="../images/Austin-Mesh-Logo.svg" class="logo" alt="Logo for Austin Mesh" title="Austin Mesh" width="500" height="121" /></a>
+            <a href="/"><img src="../images/Kearney-Mesh-Logo.svg" class="logo" alt="Logo for Kearney Mesh" title="Kearney Mesh" width="500" height="121" /></a>
             <button onclick="document.getElementById('event').showModal()" class="default meet-button">📅 Upcoming Meeting 12/11</button>
         </header>
         <dialog id="event">
             <header>
-                <h1>Austin Mesh Meeting</h1>
+                <h1>Kearney Mesh Meeting</h1>
             </header>
-            <p>Come hang out at our next installment of the Austin Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
+            <p>Come hang out at our next installment of the Kearney Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
             <p><b>Wed December 11th, 6:00pm</b> (<a href="https://discord.gg/MebnGdYQZg?event=1283623314123784293" target="_blank">Save the date</a>)</p>
             <p>Location TBD<br>Address TBD<br><!--<a href="https://www.openstreetmap.org/way/72473475">OpenStreetMap</a><br><a href="https://maps.app.goo.gl/gAiVwVC9edxJWGuL7">Google Maps</a>--></p>
             <footer>
@@ -112,8 +112,8 @@
         </main>
         <footer>
             <p>Our website content is licensed under Creative Commons
-                <br>feel free to use if for your club's website: <a href="https://github.com/austinmesh/www">Github</a>
-                <br>If we've inspired you, please <a href="mailto:info@austinmesh.org">email us</a>!
+                <br>feel free to use if for your club's website: <a href="https://github.com/kearneymesh/www">Github</a>
+                <br>If we've inspired you, please <a href="mailto:info@kearneymesh.org">email us</a>!
             <br>This site is (c) by Tommy Ekstrand and is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
         </footer>
     </body>
