--- a/coverage-map/index.html
+++ b/coverage-map/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Austin Mesh</title>
+    <title>Kearney Mesh</title>
     <meta name="viewport" meta charset="utf-8" content="width=device-width, initial-scale=1.0">
     <style>
         :root {
@@ -130,7 +130,7 @@
 
 <body>
     <header>
-        <h1>Austin Mesh</h1>
+        <h1>Kearney Mesh</h1>
     </header>
 
     <main>
@@ -149,7 +149,7 @@
                 attribution: '© OpenStreetMap contributors'
             }).addTo(map);
 
-            fetch('austin-mesh-rangetests.csv')
+            fetch('kearney-mesh-rangetests.csv')
                 .then(response => response.text())
                 .then(csv => {
                     var heatmapData = [];
