--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Austin Mesh</title>
-        <meta name="description" content="Allowing anyone with a smartphone to text without power or internet by building a solar-powered Meshtastic radio network in Austin.">
+        <title>Kearney Mesh</title>
+        <meta name="description" content="Allowing anyone with a smartphone to text without power or internet by building a solar-powered Meshtastic radio network in Kearney.">
         <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -13,15 +13,15 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="images/Austin-Mesh-Logo.svg" class="logo" alt="Logo for Austin Mesh" title="Austin Mesh" width="500" height="121" /></a>
-            <button onclick="document.getElementById('event').showModal()" class="default meet-button">📅 Upcoming Meeting 12/11</button>
+            <a href="/"><img src="images/Kearney-Mesh-Logo.svg" class="logo" alt="Logo for Kearney Mesh" title="Kearney Mesh" width="500" height="121" /></a>
+            <button onclick="document.getElementById('event').showModal()" class="default meet-button">📅 Upcoming Meeting TBD</button>
         </header>
         <dialog id="event">
             <header>
-                <h1>Austin Mesh Meeting</h1>
+                <h1>Kearney Mesh Meeting</h1>
             </header>
-            <p>Come hang out at our next installment of the Austin Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
-            <p><b>Wed December 11th, 6:00pm</b> (<a href="https://discord.gg/MebnGdYQZg?event=1283623314123784293" target="_blank">Save the date</a>)</p>
+            <p>Come hang out at our next installment of the Kearney Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
+            <p><b>Near future, 6:00pm</b> (<a href="https://discord.gg/MebnGdYQZg?event=1283623314123784293" target="_blank">Save the date</a>)</p>
             <p>Location TBD<br>Address TBD<br><!--<a href="https://www.openstreetmap.org/way/72473475">OpenStreetMap</a><br><a href="https://maps.app.goo.gl/gAiVwVC9edxJWGuL7">Google Maps</a>--></p>
             <footer>
                 <form method="dialog">
@@ -78,30 +78,39 @@
                 </menu>
             </nav>
             <!--<div class="meetup">
-                <h4>Austin Mesh Meeting</h4>
+                <h4>Kearney Mesh Meeting</h4>
                 <p><b>When</b>: Thursday, June 6th @6pm<br />
                     <b>Where</b>: <a href="https://maps.app.goo.gl/mLidvbyoTRCYXaPdA" target="_blank">Black Sheep Lodge, S Lamar</a><br />
                     <b>RSVP</b>: <a href="https://discord.gg/9bCArDRkHr?event=1228175954426331267" target="_blank">Discord</a></p>
-                    <img src="images/Austin-Mesh-Logomark.svg" width="96" height="90" alt="Square Logomark for Austin Mesh" title="Austin Mesh" class="mpowered" />
+                    <img src="images/Kearney-Mesh-Logomark.svg" width="96" height="90" alt="Square Logomark for Kearney Mesh" title="Kearney Mesh" class="mpowered" />
                 </div>-->
             <section>
-                <h1>Austin Mesh</h1>
-                <p>Austin Mesh is a community group working to build a mesh network of solar-powered <a href="https://meshtastic.org/">meshtastic</a> radios in Austin. This network acts like a city-wide text messaging system, allowing people to communicate publicly or privately with anyone on the network. All of this happens without any external infrastructure - no power, no cell phone towers, no internet.</p>
-                <p><a href="/join/">Join the mesh</a>
+                <h1>Kearney Mesh</h1>
+                <p>Kearney Mesh is a community group working to build a mesh network of solar-powered <a href="https://meshtastic.org/">meshtastic</a> radios in Kearney. This network acts like a city-wide text messaging system, allowing people to communicate publicly or privately with anyone on the network. All of this happens without any external infrastructure - no power, no cell phone towers, no internet.</p>
+                <p><a href="/join/">Join the mesh</a></p>>
             </section>
             <section>
                 <h2>More information</h2>
-                <p>We have all sorts of great content on our website. From our world famous <a href="/learn/#eli5">Meshtastic ELI5</a> to a great list of tips for <a href="/similar-networks/#start-a-similar-network">starting your own mesh network</a> we have aimed to share everything we learn as we grow Austin Mesh. Take a look through the navigation at the top of our site and <a href="mailto:info@austinmesh.org">drop us an email</a> if you appreciate what we've done or have any questions or ideas. We'd love to hear from you!</p>
+                <p>We have all sorts of great content on our website. From our world famous <a href="/learn/#eli5">Meshtastic ELI5</a> to a great list of tips for <a href="/similar-networks/#start-a-similar-network">starting your own mesh network</a> we have aimed to share everything we learn as we grow Kearney Mesh. Take a look through the navigation at the top of our site and <a href="mailto:info@kearneymesh.org">drop us an email</a> if you appreciate what we've done or have any questions or ideas. We'd love to hear from you!</p>
             </section>
             <section>
                 <h2>Community partners</h2>
-                <p>We're extremely grateful to our great community partners who have helped to build this strong network. Everyone listed here cares about keeping Austin weird (and a great place to live)!</p>
+                <p>We're extremely grateful to our great community partners who have helped to build this strong network. Everyone listed here cares about keeping Kearney connected (and a great place to live)! Please show them your gratitude.</p>
                 <div class="partner-logos">
                     <div>
-                        <img src="images/University_of_Texas_at_Austin_seal.svg" width="150" alt="Circular seal of the University of Texas at Austin" title="University of Texas at Austin" loading="lazy" />
+                        <p>We are currently seeking comunity business support and individuals who want to help and learn about this amazing technoligy.<br></p> 
                     </div>
                     <div>
-                        <img src="images/The-Liberal-Arts-and-Science-Academy-Logo.svg" width="150" alt="Logo of the Liberal Arts and Science Academy of Austin" title="Liberal Arts and Science Academy" loading="lazy" class="white-bg" />
+                        <p>Current Needs:</p>
+                        <ul>
+                            <li>
+                                Access to High places like roofs and towers to place repeater nodes.
+                            </li>
+                            <li>
+                                Finacial help for purchasing radio equipment
+                            </li>
+
+                        </ul>
                     </div>
                 </div>
                 <p><br /><a href="/partners/">Explore photos, learn more, or become a partner</a></p>
@@ -109,9 +118,10 @@
         </main>
         <footer>
             <p>Our website content is licensed under Creative Commons
-                <br>feel free to use if for your club's website: <a href="https://github.com/austinmesh/www">Github</a>
-                <br>If we've inspired you, please <a href="mailto:info@austinmesh.org">email us</a>!
+                <br>feel free to use if for your club's website: <a href="https://github.com/hotaman/kearneymesh">Github</a>
+                <br>If we've inspired you, please <a href="mailto:info@kearneymesh.org">email us</a>!
             <br>This site is (c) by Tommy Ekstrand and is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
+            <p>Kearney Mesh edits and additions by Hotaman</p>
         </footer>
     </body>
     <script>
