--- a/join/index.html
+++ b/join/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Join Austin Mesh</title>
-        <meta name="description" content="Learn about joining the Austin Mesh network, group, and our best practices.">
+        <title>Join Kearney Mesh</title>
+        <meta name="description" content="Learn about joining the Kearney Mesh network, group, and our best practices.">
         <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -13,14 +13,14 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="../images/Austin-Mesh-Logo.svg" class="logo" alt="Logo for Austin Mesh" title="Austin Mesh" width="500" height="121" /></a>
+            <a href="/"><img src="../images/Kearney-Mesh-Logo.svg" class="logo" alt="Logo for Kearney Mesh" title="Kearney Mesh" width="500" height="121" /></a>
             <button onclick="document.getElementById('event').showModal()" class="default meet-button">📅 Upcoming Meeting 12/11</button>
         </header>
         <dialog id="event">
             <header>
-                <h1>Austin Mesh Meeting</h1>
+                <h1>Kearney Mesh Meeting</h1>
             </header>
-            <p>Come hang out at our next installment of the Austin Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
+            <p>Come hang out at our next installment of the Kearney Mesh meeting series. Bring your node. Bring a friend. Bring your friend's node.</p>
             <p><b>Wed December 11th, 6:00pm</b> (<a href="https://discord.gg/MebnGdYQZg?event=1283623314123784293" target="_blank">Save the date</a>)</p>
             <p>Location TBD<br>Address TBD<br><!--<a href="https://www.openstreetmap.org/way/72473475">OpenStreetMap</a><br><a href="https://maps.app.goo.gl/gAiVwVC9edxJWGuL7">Google Maps</a>--></p>
             <footer>
@@ -80,23 +80,23 @@
             <section class="social">
                 <h5>Join us on</h5>
                 <a href="https://www.instagram.com/p/Cq0jOpYLpZy/" target="_blank"><img src="../images/social/instagram.svg"
-                    title="Austin Mesh Instagram"
+                    title="Kearney Mesh Instagram"
                     alt="Instagram logo"
                     width="40"
                 height="40" /></a>
                 <a href="https://discord.gg/6a5Sv2s9bG" target="_blank"><img src="../images/social/discord.svg"
-                    title="Austin Mesh Discord"
+                    title="Kearney Mesh Discord"
                     alt="Discord logo"
                     width="40"
                 height="40" /></a>
                 <a href="https://youtube.com/channel/UCtFl5gdwv0SdrP8sHlDMKNA"><img src="../images/social/youtube.svg"
-                    title="Austin Mesh YouTube Channel"
+                    title="Kearney Mesh YouTube Channel"
                     alt="Youtube logo"
                     width="40"
                 height="40" /></a>
             </section>
 
-            <h1>How to join AustinMesh</h1>
+            <h1>How to join KearneyMesh</h1>
             <ul>
                 <li><a href="#group">Join the group</a></li>
                 <li><a href="#network">Connect to the network</a></li>
@@ -105,9 +105,9 @@
 
             <section id="group">
                 <h2>Join the group</h2>
-                <p>Outside of the mesh network itself, we're most active in our public <a href="https://discord.gg/6a5Sv2s9bG" target="_blank">Discord Server</a>. You can <a href="mailto:info@austinmesh.org">email us</a> to be added to our mailing list for our in-person meetings in Austin. You can also follow us on <a href="https://twitter.com/AustinMeshOrg" target="_blank">Twitter</a>,
+                <p>Outside of the mesh network itself, we're most active in our public <a href="https://discord.gg/6a5Sv2s9bG" target="_blank">Discord Server</a>. You can <a href="mailto:info@kearneymesh.org">email us</a> to be added to our mailing list for our in-person meetings in Kearney. You can also follow us on <a href="https://twitter.com/KearneyMeshOrg" target="_blank">Twitter</a>,
                 <a href="https://www.instagram.com/p/Cq0jOpYLpZy/" target="_blank">Instagram</a>,
-                <a href="https://www.tiktok.com/@austinmesh.org" target="_blank">TikTok</a>,
+                <a href="https://www.tiktok.com/@kearneymesh.org" target="_blank">TikTok</a>,
                 <a href="https://youtube.com/channel/UCtFl5gdwv0SdrP8sHlDMKNA">YouTube</a>, or join our <a href="https://discord.gg/6a5Sv2s9bG" target="_blank">Discord</a>.</p>
             </section>
             
@@ -156,8 +156,8 @@
         </main>
         <footer>
             <p>Our website content is licensed under Creative Commons
-                <br>feel free to use if for your club's website: <a href="https://github.com/austinmesh/www">Github</a>
-                <br>If we've inspired you, please <a href="mailto:info@austinmesh.org">email us</a>!
+                <br>feel free to use if for your club's website: <a href="https://github.com/kearneymesh/www">Github</a>
+                <br>If we've inspired you, please <a href="mailto:info@kearneymesh.org">email us</a>!
             <br>This site is (c) by Tommy Ekstrand and is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
         </footer>
     </body>
